# PIPS

./: .gitignore  .mailmap  .travis.yml  BGPToolchain.cmake  BGQToolchain.cmake  CMakeLists.txt  CMakeLists_OSX.txt  CMakeLists_ThirdPartyLib.txt  CMakeLists_ori.txt  FAQ.md  LICENSE  LLNL-Sierra-README.md  OSX.cmake  README.md  README.txt  README_PIPSipmpp.md  Toolchain.cmake  Toolchain.cmake.feng  XC30Toolchain.cmake  XE6Toolchain.cmake  build_3rdparty.sh  build_pips.sh  deploy_rsa.enc  pipsnlp.parameter
BasisBootstrap/: CMakeLists.txt  basisBootstrapDriver.hpp  basisBootstrapScenRedClp.cpp  basisBootstrapScenRedDriver.hpp  simpleBasisBootstrapClp.cpp
BasisBootstrap/ScenarioReduction/: fastForwardSelection.cpp  scenarioReduction.hpp  scenarioReductionUtilities.cpp  scenarioReductionUtilities.hpp
Input/: AmplData_NL.cpp  AmplData_NL.hpp  CMakeLists.txt  PyomoInput.cpp  PyomoInput.hpp  SMLInput.cpp  SMLInput.hpp  SMPSInput.cpp  SMPSInput.hpp  StructJuMPInput.cpp  StructJuMPInput.h  amplGenStochInput.cpp  amplGenStochInput.hpp  amplGenStochInput_AddSlack.cpp  amplGenStochInput_AddSlack.hpp  combinedInput.cpp  combinedInput.hpp  dcopflowInput.cpp  dcopflowInput.hpp  rawInput.cpp  rawInput.hpp  stochasticInput.cpp  stochasticInput.hpp
Input/OPF_Matpower/: CMakeLists.txt  constants.h  dcopflow.cpp  dcopflow.hpp  dcopflowInput.cpp  dcopflowInput.hpp  graphPart.cpp  graphPart.h  ps.cpp  ps.h  tempMain.cpp
Lagrange/: CMakeLists.txt
Lagrange/Bundle/: bundleManager.hpp  cuttingPlaneBALP.cpp  cuttingPlaneBALP.hpp  cuttingPlaneManager.hpp  l1TrustBALP.cpp  l1TrustBALP.hpp  l1bundleBALP.cpp  l1bundleBALP.hpp  lInfTrustBALP.cpp  lInfTrustBALP.hpp  lInfTrustBALP2.cpp  lInfTrustBALP2.hpp  levelBALP.cpp  levelBALP.hpp  levelManager.hpp  proxL1Manager.hpp  proxL1TrustManager.hpp  proxLevelManager.hpp  proxLinfTrustManager.hpp  proxQPManager.hpp  proximalBAQP.cpp  proximalBAQP.hpp
Lagrange/Drivers/: combineScenarios.cpp  conicBundleDriver.hpp  conicBundleDriverCombinedSMPS.cpp  conicBundleDriverRaw.cpp  conicBundleDriverSMPS.cpp  conicBundleParDriver1.hpp  conicBundleParDriver1Raw.cpp  conicBundleParDriver1SMPS.cpp  cpmRaw.cpp  cpmSMPS.cpp  l1bundleSMPS.cpp  l1trustSMPS.cpp  lagrangeCombinedScenRedRootNodeSMPS.cpp  lagrangeRootNode.hpp  levelSMPS.cpp  linftrustRaw.cpp  linftrustSMPS.cpp  proxBundleRaw.cpp  proxBundleSMPS.cpp  proxBundleScipOOQPRaw.cpp  proxBundleScipOOQPSMPS.cpp  proxBundleScipPIPSRaw.cpp  proxBundleScipPIPSSMPS.cpp  proxBundleScipRaw.cpp  proxBundleScipSMPS.cpp  proxLevelSMPS.cpp  testSols.cpp  testSolsHeur1.cpp
Lagrange/LagrangeSubproblemSolver/: CbcLagrangeSolver.cpp  CbcLagrangeSolver.hpp  LagrangeSubproblemInterface.hpp  ScipLagrangeSolver.cpp  ScipLagrangeSolver.hpp
Lagrange/RecourseSubproblemSolver/: CbcRecourseSolver.cpp  ClpRecourseSolver.cpp  ClpRecourseSolver.hpp
LagrangeBnC/: CMakeLists.txt
LagrangeBnC/Drivers/: combineScenarios.hpp  conicBundleDriver.hpp  conicBundleDriverSMPS.cpp  lagrangeCombinedScenRedRootNode.cpp  lagrangeCombinedScenRedRootNode.hpp  lagrangeCombinedScenRedRootNodeSMPS.cpp  lagrangeRootNode.cpp  lagrangeRootNode.hpp  lagrangeRootNodeSMPS.cpp  lagrangeRootNodeSerial.cpp
LagrangeBnC/LagrangeSubproblemSolver/: CbcLagrangeSolver.cpp  CbcLagrangeSolver.hpp
LagrangeBnC/RecourseSubproblemSolver/: CbcRecourseSolver.cpp  CbcRecourseSolver.hpp  RecourseSubproblemInterface.hpp
PIPS-IPM/: CMakeLists.txt  fromRaw.cpp
PIPS-IPM/Core/: CMakeLists.txt
PIPS-IPM/Drivers/: callbackExample.cpp  callbackTest.cpp  fromRaw.cpp  meanSolveAndRecourseEval.cpp  ooqpFromRaw.cpp  pipsipmBatchFromRaw.cpp  pipsipmBatchFromRaw_schur.cpp  pipsipmFromRaw.cpp  pipsipmFromRaw_comm2_schur.cpp  pipsipmFromRaw_schur.cpp  pipsipmFromRaw_schur32.cpp  pipsipmPyomo_schur.cpp  pipsipm_C_callbacks.cpp  pipsipm_C_callbacks_schur.cpp  unitCommitment.cpp
PIPS-IPM/Test/: pipsipmLinkConsTest.sh  pipsipmMultiTests.sh
PIPS-NLP/: CMakeLists.txt  README.md  README.txt  global_var.c  global_var.cpp  global_var.h  par_macro.h  parmodel.cpp  parmodel2.cpp  pipsnlp.parameter
PIPS-NLP/Core/: CMakeLists.txt
PIPS-NLP/Docs/: Doxyfile.in
PIPS-NLP/Drivers/: parallelAmplDriver.cpp  parallelDcopfDriver.cpp  parallelPipsNlp_C_Callback.cpp  parallelPipsNlp_C_Callback.h  pipsipmNlp_C_callbacks.cpp  pipsipmNlp_C_callbacks.h  serialAmplDriver.cpp
PIPS-NLP/JuliaInterface/: ParPipsNlp.jl  PipsNlp.jl  model1.jl  parmodel1.jl  parmodel2.jl  parmodel3.jl  parmodel4.jl  parmodel5.jl  parmodel9.jl
PIPS-NLP/Test/: CMakeLists.txt  parleastsquares.cpp  parmodel.cpp  parmodel1.cpp  parmodel1yk.cpp  parmodel2.cpp  parmodel3.cpp  parmodel3eq.cpp  parmodel9.cpp  parmodel9.mod  parmodel9.run  parmodel9_yk.cpp  parmodelLink.cpp  parmodel_1STonly.cpp  parmodel_eqieq_lp.cpp
PIPS-S/: CMakeLists.txt
PIPS-S/Basic/: BA.cpp  BA.hpp  BAData.cpp  BAData.hpp  BAVector.cpp  BAVector.hpp  CMakeLists.txt  PIPSLogging.cpp  PIPSLogging.hpp  denseVector.cpp  denseVector.hpp  memContainer.hpp  sparseVector.cpp  sparseVector.hpp
PIPS-S/CoinBALPFactorization/: CMakeLists.txt  CoinBALPFactorization.hpp  CoinBALPFactorization1.cpp  CoinBALPFactorization2.cpp  CoinBALPFactorization3.cpp  CoinBALPFactorization4.cpp
PIPS-S/Core/: BALPSolverBase.cpp  BALPSolverBase.hpp  BALPSolverDual.cpp  BALPSolverDual.hpp  BALPSolverPrimal.cpp  BALPSolverPrimal.hpp  BALinearAlgebra.cpp  BALinearAlgebra.hpp  BAPFIPar.cpp  BAPFIPar.hpp  BAPFIParWrapper.hpp  CMakeLists.txt  PIPSSInterface.cpp  PIPSSInterface.hpp
PIPS-S/Drivers/: bootstrapDriver.hpp  clpFromRaw.cpp  (+6 more)
SolverInterface/: BALPSolverInterface.hpp  CMakeLists.txt  CbcBALPInterface.cpp  CbcBALPInterface.hpp  ClpBALPInterface.cpp  ClpBALPInterface.hpp  cbcExtensive.cpp  cbcExtensiveSMPS.cpp
UCRolling/: CMakeLists.txt  ucRollingBundle.cpp  ucRollingCbcExtensive.cpp  ucRollingModel.cpp  ucRollingModel.hpp  ucRollingOOQPExtensive.cpp  ucRollingProxBundle.cpp  ucRollingTest.cpp
UCTests/: CMakeLists.txt  OsiSubproblemWrapper.cpp  OsiSubproblemWrapper.hpp  README  cutsTest.cpp  ucCoefficientDiving.cpp  ucRootNode.hpp  ucRootNodeClp.cpp  ucRootNodePIPSS.cpp  ucTestSol.cpp
(+1849 files in other folders)
